# Vigenere-IC

./: .gitignore  CMakeLists.txt  LICENSE  README.md
resources/: cipherenglish.txt  cipherpt.txt
src/: CoincidenceIndex.cpp  CoincidenceIndex.h  IndexOfCoincidence.cpp  IndexOfCoincidence.h  io.cpp  io.h  main.cpp  main.h
